--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "name": "dbspacey",
   "version": "0.0.1",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-coffeelint": "0.0.7",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha": "~0.4.1"
+  }
 }
