--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "dbspacey",
   "version": "0.0.1",
   "scripts": {
-	  "test": "grunt test"
+    "test": "grunt test"
   },
   "repository": {
-	  "type": "git",
-	  "url": "git@github.com:jj56/dbspacey.git"
+    "type": "git",
+    "url": "git@github.com:jj56/dbspacey.git"
   },
   "dependencies": {},
   "devDependencies": {
@@ -17,6 +17,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-coffeelint": "0.0.7",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha": "~0.4.1"
+    "grunt-mocha": "~0.4.1",
+    "grunt-contrib-connect": "~0.5.0"
   }
 }
